ssl_examples/01-momfer-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: momfer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: momfer
        external-ingress: enabled
#        egress: enabled
    spec:
      containers:
      - name: momfer
        image: registry.diginfra.net/momfer:latest
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 8000
