ssl_examples/02-momfer-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: momfer
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  selector:
    app: momfer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000 # This is where the pod listens to
