ssl_examples/04-momfer-ingress-knaw-certificate.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: momfer-meertens
  annotations:
   ingress.kubernetes.io/redirect-permanent: "true"
   ingress.kubernetes.io/ssl-redirect: "true"
   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: momfer.meertens.knaw.nl
    http:
      paths:
      - backend:
          serviceName: momfer
          servicePort: http
  tls:
  - hosts:
    - momfer.meertens.knaw.nl
    secretName: momfer.meertens.knaw.nl

# In this case you must create the secret with the certificate yourself before deploying.
# Assuming you have the .key file and obtained the certificate from ICTS (or TCI):
#
# $ kubectl -n tci-momfer create secret tls momfer.meertens.knaw.nl --key=./momfer_meertens_knaw_nl.key --cert=./momfer_meertens_knaw_nl.crt 
#
# Pasting the key and crt into a yaml file yourself is also possible but the above is easier imho.
#
# This will also work if the domain name is not yet in the DNS system.
#
# $ kubectl -n tci-momfer get secret momfer.meertens.knaw.nl
# NAME                      TYPE                DATA      AGE
# momfer.meertens.knaw.nl   kubernetes.io/tls   2         10d
# 
# and "get secret momfer.meertens.knaw.nl -o yaml" returns the yaml version.
#
# See also https://docs.knaw-huc.kumina.net/Getting_Started/Making_Applications_Available
